<resources>
    <string name="app_name">TibaKwanza</string>
    <string name="title_activity_profile">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">share</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_systems">Payment  Systems</string>
    <string name="notifications">Notifications</string>
    <string name="hospitals">Near by Hospitals</string>
    <string name="about">TibaKwanza is the application that enables NHIF applicants to apply for the membership cards</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="article_detail_more_info">More Info</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Signout</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="account_login">Account Login</string>
    <string name="password1">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="todo1">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="marital_status">Marital Status</string>
    <string name="submit">SUBMIT</string>
    <string name="application_form">APPLICATION FORM</string>
    <string name="noelyhero">Noelyhero.</string>
    <string name="todo">TODO</string>
    <string name="noely">noely</string>
    <string name="_0652_760980">0652 760980</string>
    <string name="welcome">Welcome</string>
    <string name="jackie">Jackie</string>
    <string name="gender">Gender</string>
    <string name="reg_no">Reg.No</string>
    <string name="dob">DOB</string>
    <string name="nationality">Nationality</string>
    <string name="female">Female</string>
    <string name="_15173055122">15173055122</string>
    <string name="_10_04_1992">10–04-1992</string>
    <string name="tanzanian">Tanzanian</string>
    <string name="reg_number">Email</string>
</resources>
