<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backOne"
    tools:context="com.example.miriam.tibakwanza.AppnActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="1dp"
            tools:ignore="UnknownIdInLayout"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="0dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/full_name"
                        android:id="@+id/user_name"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/password"
                        android:id="@+id/pass"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/reg_number"
                        android:id="@+id/regNo"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/gender"
                        android:id="@+id/gender"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/dob"
                        android:id="@+id/dob"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Courses"
                    android:drawableTint="@color/colorAccent"

                    tools:targetApi="o" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nationality"
                        android:id="@+id/nation"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/marital_status"
                        android:id="@+id/marital"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/application_form"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</android.support.constraint.ConstraintLayout>
























